# AIWertPilot

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_MASTER_PROMPT.md  README.md  RESEARCH_PROTOCOL.md  START_HERE.md  docker-compose.yml  pyproject.toml  schema.sql  seed_sources.csv
data/: seed_claims.csv
docs/: ADR-001-architecture.md  DATA_DICTIONARY.md  IMPLEMENTATION_PLAN.md  NEXT_RELEASES.md  RESEARCH_WORKFLOW.md  RIGHTS_AND_CONTENT_POLICY.md
migrations/: env.py
migrations/versions/: 0001_baseline_schema.py  0002_review_items_metadata.py  0003_pgvector_hnsw_index.py
src/de_ai_kb/: __init__.py  main.py
src/de_ai_kb/api/: deps.py
src/de_ai_kb/cli/: main.py
src/de_ai_kb/core/: config.py  exceptions.py  logging.py
src/de_ai_kb/db/: base.py  session.py
src/de_ai_kb/domain/: enums.py  freshness.py  rights_policy.py  similarity.py  slugify.py  taxonomy_seed_data.py  url.py
tests/: conftest.py
tests/fixtures/: malformed_sources.csv
tests/integration/: test_api_auth.py  test_api_cors.py  test_api_health.py  test_api_review_items.py  test_api_sources.py  test_claims_validation.py  test_cli_sources.py  test_dedup.py  test_evidence.py  test_review_and_audit.py  test_seed_import.py  test_snapshot_immutable.py  test_source_quality.py  test_source_registry.py  test_taxonomy_seed.py
tests/unit/: test_cors_config.py  test_csv_rows.py  test_enum_constraint_lockstep.py  test_freshness.py  test_rights_policy.py  test_similarity.py  test_url_canonicalization.py
web/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
(+98 files in other folders)
